update some and solve error

--- a/inance/assets/css/style.css
+++ b/inance/assets/css/style.css
@@ -741,6 +741,7 @@ a:focus {
   text-transform: uppercase;
   font-weight: bold;
   margin-bottom: 25px;
+  color: #FFFFFF;
 }
 
 .info_section .social-box {
